Add HireArt dev blog to list

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://code.hireart.com
+    title: Code at HireArt
   - url: http://joshlain.cz
     title: Josh Laincz
   - url: https://software-berater.net/
