Added Tofugu to built list.

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -270,6 +270,8 @@ built:
     title: Oleg Mokhniuk
   - url: https://dapulse.com
     title: dapulse
+  - url: https://www.tofugu.com/
+    title: Tofugu
 mobile:
   - url: http://pollev.com
 blogs:
