Added Pub Academy to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -272,6 +272,8 @@ built:
     title: dapulse
   - url: https://www.tofugu.com/
     title: Tofugu
+  - url: https://pubacademy.com/
+    title: Pub Academy
 mobile:
   - url: http://pollev.com
 blogs:
