Add PromptWorks to Middleman users

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://www.PromptWorks.com/
+    title: PromptWorks - Test-driven, agile software developers specializing in Ruby, Python, and JavaScript.
   - url: http://www.liveslides.com/
     title: LiveSlides
   - url: http://joshlain.cz
