added erickuhn19.com to blogs built with middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -277,6 +277,8 @@ built:
 mobile:
   - url: http://pollev.com
 blogs:
+  - url: http://erickuhn19.com
+    title: erickuhn19.com 
   - url: http://code.hireart.com
     title: Code at HireArt
   - url: https://viljamis.com
