Add fabricationgem.org to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://www.fabricationgem.org
+    title: Fabrication - simple and powerful object generation gem for Ruby
   - url: https://marsbased.com
     title: MarsBased - Web and Mobile Development Consultancy from Barcelona specialising in Ruby on Rails, AngularJS and Ionic.
   - url: https://www.PromptWorks.com/
