--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,7 @@
 built:
+  - url: https://adrianching.com
+    title: Adrian Ching - Software Engineer
+    source: https://github.com/adrianchinghc/adrianchinghc.github.io
   - url: https://getprintastic.com/
     title: "Printastic - Print your memories"
   - url: http://evmorov.github.io/lang-compare/
