Add Citus Data to the sites using middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -292,6 +292,8 @@ built:
   - url: http://rubybelgium.be/
     title: Ruby Belgium
     source: https://github.com/brug-be/rubybelgium
+  - url: http://www.citusdata.com
+    title: "Citus Data"
 mobile:
   - url: http://pollev.com
 blogs:
