Adds Jan Kraus Stanko blog to list of sites using Middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -7,6 +7,8 @@ built:
   - url: http://evmorov.github.io/lang-compare/
     title: "Side-by-side language comparison"
     source: https://github.com/evmorov/lang-compare
+  - url: http://jankraus.pl/
+    title: "Jan Kraus Stanko Blog"
   - url: https://www.fabricationgem.org
     title: Fabrication - simple and powerful object generation gem for Ruby
   - url: https://marsbased.com
