Add landing page built with Middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -317,6 +317,8 @@ built:
   - url: http://www.softwareniagara.com
     title: "Software Niagara"
     source: https://github.com/softwareniagara/softwareniagara.com
+  - url: https://eazybi.com/
+    title: "eazyBI"
 mobile:
   - url: http://pollev.com
 blogs:
