Add DigitalOcean to built sites
We're big fans of Middleman. Thanks for all the work put into it!

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://www.digitalocean.com
+    title: DigitalOcean
   - url: http://www.focuswish.com
     title: FocusWish
   - url: http://www.formcandy.com
