Added LoremIpsumGenerator to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://loremipsumgenerator.com/
+    title: Lorem Ipsum Generator
   - url: https://www.digitalocean.com
     title: DigitalOcean
   - url: http://www.focuswish.com
