Add title for Archiver site built with middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -172,6 +172,7 @@ built:
   - url: http://tarebyte.github.io
   - url: http://gilesthompson.co.nz
   - url: http://archiverapp.com
+    title: Archiver - Open archives and compress files on Mac OS X
   - url: http://www.leinakanal-gotha.de
   - url: http://uandi.com
   - url: http://busyconf.com
