Add Renamer to sites built with middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -173,6 +173,8 @@ built:
   - url: http://gilesthompson.co.nz
   - url: http://archiverapp.com
     title: Archiver - Open archives and compress files on Mac OS X
+  - url: http://renamer.com
+    title: Renamer - batch file renamer for Mac
   - url: http://www.leinakanal-gotha.de
   - url: http://uandi.com
   - url: http://busyconf.com
