--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://aroaminggeek.com
+    title: A Roaming Geek
   - url: https://loremipsumgenerator.com/
     title: Lorem Ipsum Generator
   - url: https://www.digitalocean.com
@@ -329,6 +331,8 @@ built:
 mobile:
   - url: http://pollev.com
 blogs:
+  - url: http://gnotc.com
+    title: G, not C.
   - url: http://lunestaconfessions.com
     title: "Lunesta Confessions"
   - url: http://erickuhn19.com
