--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://dev.welaika.com
+    title: weLaika Software Development
   - url: http://www.beerfestivalbuddy.com
     title: Beer Festival Buddy
     source: https://github.com/matoakley/beer-festival-buddy-middleman
