Configure Travis CI to use setup script
The setup script was introduced in
https://github.com/middleman/middleman-guides/commit/bb1f9583b714287587af7c925c71a79cf7d5f0a6

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: ruby
-before_install:
-  - "npm install"
+install: "bin/setup"
 script: "bundle exec middleman build --verbose"
 sudo: false
