--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: ruby
-rvm:
-- 2.3.1
-before_install:
-- "npm install"
-script: bundle exec middleman build --verbose
+install: "bin/setup"
+script: "bundle exec middleman build --verbose"
 sudo: false
