--- a/data/sites.yml
+++ b/data/sites.yml
@@ -341,6 +341,8 @@ built:
     title: Nomad Rides
   - url: http://cecilitse.org/
     title: Cecile Veneziani - Rails Developer
+  - url: https://www.prx.co/
+    title: "PRX.co: PR for startups and small businesses"
 mobile:
   - url: http://pollev.com
 blogs:
