--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: ruby
+before_install: "nvm install node"
 install: "bin/setup"
 script: "bundle exec middleman build --verbose"
 sudo: false
