--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: ruby
 before_install: "nvm install node"
 install: "bin/setup"
+notifications:
+  email: false
 script: "bundle exec middleman build --verbose"
 sudo: false
