--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "middleman-guides",
+  "name": "middlemanapp.com",
   "version": "1.0.0",
-  "description": "Middleman Documentation",
+  "description": "Middleman Website",
   "main": "source/javascripts/site.js",
   "private": true,
   "scripts": {
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/middleman/middleman-guides.git"
+    "url": "https://github.com/middleman/middlemanapp.com.git"
   },
   "author": "Thomas Reynolds <me@tdreyno.com>",
-  "license": "MIT",
+  "license": "Creative Commons Attribution 3.0 Unported",
   "bugs": {
-    "url": "https://github.com/middleman/middleman-guides/issues"
+    "url": "https://github.com/middleman/middlemanapp.com/issues"
   },
-  "homepage": "https://github.com/middleman/middleman-guides#readme",
+  "homepage": "https://www.middlemanapp.com/",
   "dependencies": {
     "anchor-js": "^3.2.2",
     "jquery": "^3.1.1",
